adding Js and CSS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Crimson+Text:ital@1&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <title>Art Gallery</title>
   </head>
   <body>
@@ -18,8 +26,23 @@
       <div class="button"><button class="btn">See more</button></div>
     </div>
 
+    <div class="edward">
+      <div>
+        <img src="./imgs/Photo_of_Edward_Hopper.jpg" class="Ed" />
+      </div>
+      <div class="box">
+        <p class="intro">Who is Edward?</p>
+        <h3>"A painter of light and night"</h3>
+        <h4>
+          American painter whose realistic depictions of everyday urban scenes
+          shock the viewer into recognition of the strangeness of familiar
+          surroundings
+        </h4>
+      </div>
+    </div>
+
     <div class="middle">
-      <h2>Discover more</h2>
+      <span> <h2>Discover his Works</h2></span>
 
       <div class="container">
         <div>
