--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <title>Art Gallery</title>
   </head>
   <body>
-    <header></header>
-
     <div class="main">
+      <nav>Art Gallery</nav>
       <h1 id="main">Edward Hopper,</h1>
       <div class="button"><button class="btn">See more</button></div>
     </div>
@@ -30,9 +29,11 @@
       <div>
         <img src="./imgs/Photo_of_Edward_Hopper.jpg" class="Ed" />
       </div>
-      <div class="box">
-        <p class="intro">Who is Edward?</p>
-        <h3>"A painter of light and night"</h3>
+      <div>
+        <p class="intro" id="intro">Who is Edward?</p>
+      </div>
+      <div class="box" id="box">
+        <h3><b> " A painter of light and night " </b></h3>
         <h4>
           American painter whose realistic depictions of everyday urban scenes
           shock the viewer into recognition of the strangeness of familiar
@@ -47,17 +48,17 @@
       <div class="container">
         <div>
           <img src="./imgs/6.jpg" id="current" />
-          <p id="exp">Nighthawks (1942); in the Art Institute of Chicago.</p>
+          <p id="exp">Name of works</p>
         </div>
       </div>
 
       <div class="imgs">
-        <img src="./imgs/1.jpg" alt="" />
-        <img src="./imgs/2.jpg" alt="" />
-        <img src="./imgs/3.jpg" alt="" />
-        <img src="./imgs/4.jpg" alt="" />
-        <img src="./imgs/5.jpg" alt="" />
-        <img src="./imgs/6.jpg" alt="" />
+        <img src="./imgs/1.jpg" id="Office in Small City, 1953" />
+        <img src="./imgs/2.jpg" id="People In The Sun, 1960" />
+        <img src="./imgs/3.jpg" id="Chair Car, 1965" />
+        <img src="./imgs/4.jpg" id="Night Windows, 1938" />
+        <img src="./imgs/5.jpg" id="Nighthawks ,1942" />
+        <img src="./imgs/6.jpg" id="Rooms By The Sea, 1951" />
       </div>
     </div>
     <br /><br /><br /><br />
