--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div class="main">
       <nav>Art Gallery</nav>
       <h1 id="main">Edward Hopper,</h1>
-      <div class="button"><button class="btn">See more</button></div>
+      <div class="button">
+        <a href="#edward"><button class="btn">See more</button></a>
+      </div>
     </div>
 
-    <div class="edward">
+    <div id="edward" class="edward">
       <div>
         <img src="./imgs/Photo_of_Edward_Hopper.jpg" class="Ed" />
       </div>
